# Screw_Robotic_Package

./: CMakeLists.txt  Github.sh  Menual.md  configure  configure.in
.github/workflow/: cmake.yaml
autom4te.cache/: output.0  requests  traces.0
include/: Screw_Robotics.h
src/: Screw_Robotics.cpp  Test.cpp
